# arwalang

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  requirements.md  tasks.md
.github/workflows/: ci.yml
docs/: README.md
docs/phases/: phase-00-project-setup.md  phase-01-lexer.md  phase-02-parser-ast.md  phase-03-name-resolution.md  phase-04-type-checker.md  phase-05-annotation-processor.md  phase-06-di-graph.md  phase-07-module-graph.md  phase-08-route-table.md  phase-09-lifecycle-pipeline.md  phase-10-ir-codegen.md  phase-12-cli.md  phase-13-scaffolding-blueprint.md  phase-14-stdlib.md  roadmap.md  template.md
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: main.rs
src/annotations/: mod.rs
src/cli/: add.rs  build.rs  check.rs  fmt.rs  mod.rs  new.rs  run.rs  templates.rs
src/codegen/: cranelift.rs  linker.rs  mod.rs
src/di/: graph.rs
src/ir/: mod.rs
src/lexer/: lexer.rs  token.rs
src/lifecycle/: pipeline.rs
src/modules/: graph.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/resolver/: mod.rs
src/routes/: registry.rs
src/typechecker/: mod.rs
stdlib/: http.rw  json.rw  result.rw
templates/: registry.json
templates/features/auth-jwt/src/features/: auth-jwt.rw  auth.example.rw  jwt.guard.rw  jwt.utils.rw
templates/starters/api/src/: app.controller.rw  app.service.rw  create-app.dto.rw  main.rw
templates/starters/full/src/: app.controller.rw  auth.guard.rw  auth.service.rw  create-user.dto.rw  database.service.rw  logger.service.rw  main.rw
templates/starters/minimal/src/: main.rw
(+11 files in other folders)
