[package]
name = "arwa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
cranelift-codegen = "0.125"
cranelift-frontend = "0.125"
cranelift-module = "0.125"
cranelift-object = "0.125"
cranelift-native = "0.125"
